<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="18dp"
              android:gravity="center"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="添加账号"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.lznby.smartiot.view.MyEditText
        android:id="@+id/mt_child_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:edit_text_hint="@string/login_hint_username"
        app:edit_text_input_type="false"
        app:image_bg_src="@drawable/falseicon"
        app:image_bg_visible="true"
        app:title_text="@string/login_tv_username"/>

    <com.lznby.smartiot.view.MyEditText
        android:id="@+id/mt_child_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:edit_text_hint="@string/login_hint_password"
        app:edit_text_input_type="false"
        app:image_bg_src="@drawable/falseicon"
        app:image_bg_visible="true"
        app:title_text="@string/login_tv_password"/>


    <Button
        android:id="@+id/bt_add_child_account"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/login_button_selector"
        android:text="添加账号"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"/>

</LinearLayout>
